@@ -46,7 +46,6 @@ conpl =
 #' @export contappl
 contappl = 
   setRefClass("contappl", 
->>>>>>> Adding tapered power-law distribution
               contains="ctn_distribution",
               fields = list(
                 dat = function(x) {
@@ -85,17 +84,19 @@ contappl =
 
 
 #' @rdname displ
-#' @aliases conpltap-class
-#' @exportClass conpltap
-#' @export conpltap
-conpltap = 
-  setRefClass("conpltap", 
+#' @aliases contappl-class
+#' @exportClass contappl
+#' @export contappl
+contappl = 
+  setRefClass("contappl", 
               contains="ctn_distribution",
               fields = list(
                 dat = function(x) {
                   if(!missing(x) && !is.null(x)) {
                     check_ctn_data(x)
                     d = sort(x)
+                    internal[["cum_slx"]] <<- rev(cumsum(log(rev(d))))
+                    
                     internal[["cum_n"]] <<- length(d):1
                     internal[["dat"]] <<- sort(d)
                     xmin <<- d[1]
@@ -110,6 +111,7 @@ conpltap =
                     internal[["xmin"]] <<- x
                     if(length(internal[["dat"]])) {
                       selection = min(which(internal[["dat"]] >= (x- .Machine$double.eps ^ 0.5)))
+                      internal[["slx"]] <<- internal[["cum_slx"]][selection]                      
                       internal[["n"]] <<- internal[["cum_n"]][selection]      
                     }
                   } else  internal[["xmin"]]
